Actividad Evaluable 04-FINAL UD03

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -42,7 +42,7 @@ msg.province.add=Add New Province
 msg.province.id=ID
 msg.province.code=Code
 msg.province.name=Name
-msg.province.id_region=id_region
+msg.province.region_id=region_id
 msg.province.actions=Actions
 msg.province.edit=Edit
 msg.province.delete=Delete
@@ -53,7 +53,7 @@ msg.province-form.add=New Province
 msg.province-form.edit=Edit Province
 msg.province-form.code=Code
 msg.province-form.name=Name
-msg.province-form.id_region=id_region
+msg.province-form.region_id=region_id
 msg.province-form.create=Create
 msg.province-form.update=Update
 msg.province-form.insert=Insert
@@ -130,3 +130,35 @@ msg.location-form.returnback=Return to the list
 # Location.java
 
 # LocationController.java:
+
+
+# category.jsp
+msg.category.title=List of Categories
+msg.category.add=Add New Category
+msg.category.id=ID
+msg.category.name=Name
+msg.category.image=Image
+msg.category.parentCategory=ParentCategory
+msg.category.noImage=Not Image
+msg.category.actions=Actions
+msg.category.edit=Edit
+msg.category.delete=Delete
+msg.category.confirm=Are you sure you want to delete this category?
+
+# category-form.jsp
+msg.category-form.add=New Category
+msg.category-form.edit=Edit Category
+msg.category-form.name=Name
+msg.category-form.image=Image
+msg.category-form.parentCategory=ParentCategory
+msg.category-form.parentCategory.name=Parent Category
+msg.category-form.create=Create
+msg.category-form.update=Update
+msg.category-form.insert=Insert
+msg.category-form.returnback=Return to the list
+
+# Category.java
+
+
+# CategoryController.java:
+
