--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -40,7 +40,7 @@ msg.province.add=Agregar Nueva Provincia
 msg.province.id=ID
 msg.province.code=C\u00F3digo
 msg.province.name=Nombre
-msg.province.id_region=Comunidad Aut\u00F3noma
+msg.province.region_id=Comunidad Aut\u00F3noma
 msg.province.actions=Acciones
 msg.province.edit=Editar
 msg.province.delete=Eliminar
@@ -51,7 +51,7 @@ msg.province-form.add=Nueva Provincia
 msg.province-form.edit=Editar Provincia
 msg.province-form.code=C\u00F3digo
 msg.province-form.name=Nombre
-msg.province-form.id_region=Comunidad Aut\u00F3noma
+msg.province-form.region_id=Comunidad Aut\u00F3noma
 msg.province-form.create=Crear
 msg.province-form.update=Actualizar
 msg.province-form.insert=Insertar
@@ -128,3 +128,34 @@ msg.location-form.returnback=Volver a la lista
 # Location.java
 
 # LocationController.java:
+
+# category.jsp
+msg.category.title=Listado de Categorias
+msg.category.add=Agregar Nueva Categoria
+msg.category.id=ID
+msg.category.name=Nombre
+msg.category.image=Imagen
+msg.category.parentCategory=Categoria Padre
+msg.category.noImage=Sin Imagen
+msg.category.actions=Acciones
+msg.category.edit=Editar
+msg.category.delete=Eliminar
+msg.category.confirm=\u00BFEst\u00E1s seguro de que deseas eliminar esta Categoria?
+
+# category-form.jsp
+msg.category-form.add=Nueva Categoria
+msg.category-form.edit=Editar Categoria
+msg.category-form.name=Nombre de la Categoria
+msg.category-form.image=Imagen de la Categoria
+msg.category-form.parentCategory=Categoria Padre
+msg.category-form.parentCategory.name=Categoria Padre
+msg.category-form.create=Crear
+msg.category-form.update=Actualizar
+msg.category-form.insert=Insertar
+msg.category-form.returnback=Volver a la lista
+
+
+# Category.java
+
+
+# CategoryController.java:
