Actividad Evaluable 04-FINAL UD03

--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -23,16 +23,16 @@ msg.region-form.insert=Insertar
 msg.region-form.returnback=Volver a la lista
 
 # Region.java
-msg.region.code.notEmpty=El código no puede estar vacío
-msg.region.code.size=El código no puede tener más de 2 caracteres
-msg.region.name.notEmpty=El nombre no puede estar vacío
-msg.region.name.size=El nombre no puede tener más de 100 caracteres
+msg.region.code.notEmpty=El cï¿½digo no puede estar vacï¿½o
+msg.region.code.size=El cï¿½digo no puede tener mï¿½s de 2 caracteres
+msg.region.name.notEmpty=El nombre no puede estar vacï¿½o
+msg.region.name.size=El nombre no puede tener mï¿½s de 100 caracteres
 
 # RegionController.java:
-msg.region-controller.insert.codeExist=El código de la Comunidad Autonoma ya existe.
-msg.region-controller.insert.error=Error al insertar la Comunidad Autónoma.
-msg.region-controller.update.codeExist=El código de la Comunidad Autonoma ya existe.
-msg.region-controller.update.error=Error al insertar la Comunidad Autónoma.
+msg.region-controller.insert.codeExist=El cï¿½digo de la Comunidad Autonoma ya existe.
+msg.region-controller.insert.error=Error al insertar la Comunidad Autï¿½noma.
+msg.region-controller.update.codeExist=El cï¿½digo de la Comunidad Autonoma ya existe.
+msg.region-controller.update.error=Error al insertar la Comunidad Autï¿½noma.
 
 # province.jsp
 msg.province.title=Listado de Provincias
@@ -58,15 +58,15 @@ msg.province-form.insert=Insertar
 msg.province-form.returnback=Volver a la lista
 
 # Province.java
-msg.province.code.notEmpty=El código no puede estar vacío
-msg.province.code.size=El código no puede tener más de 2 caracteres
-msg.province.name.notEmpty=El nombre no puede estar vacío
-msg.province.name.size=El nombre no puede tener más de 100 caracteres
+msg.province.code.notEmpty=El cï¿½digo no puede estar vacï¿½o
+msg.province.code.size=El cï¿½digo no puede tener mï¿½s de 2 caracteres
+msg.province.name.notEmpty=El nombre no puede estar vacï¿½o
+msg.province.name.size=El nombre no puede tener mï¿½s de 100 caracteres
 
 # ProvinceController.java:
-msg.province-controller.insert.codeExist=El código de la Provincia ya existe.
+msg.province-controller.insert.codeExist=El cï¿½digo de la Provincia ya existe.
 msg.province-controller.insert.error=Error al insertar la Provincia.
-msg.province-controller.update.codeExist=El código de la Provincia ya existe.
+msg.province-controller.update.codeExist=El cï¿½digo de la Provincia ya existe.
 msg.province-controller.update.error=Error al insertar la Provincia.
 
 
@@ -90,8 +90,8 @@ msg.supermarket-form.insert=Insertar
 msg.supermarket-form.returnback=Volver a la lista
 
 # Supermarket.java
-msg.supermarket.name.notEmpty=El nombre no puede estar vacío
-msg.supermarket.name.size=El nombre no puede tener más de 100 caracteres
+msg.supermarket.name.notEmpty=El nombre no puede estar vacï¿½o
+msg.supermarket.name.size=El nombre no puede tener mï¿½s de 100 caracteres
 
 # SupermarketController.java:
 msg.supermarket-controller.insert.nameExist=El nombre del supermercado ya existe.
@@ -169,19 +169,21 @@ msg.ticket.actions=Acciones
 msg.ticket.detail=Ver Detalle
 msg.ticket.edit=Editar
 msg.ticket.delete=Eliminar
-msg.ticket.confirm=¿Está seguro de que desea eliminar este ticket?
-msg.ticket.add=Añadir Nuevo Ticket
-msg.ticket.returnback=Volver a la Página Principal
+msg.ticket.confirm=Â¿EstÃ¡s seguro de que desea eliminar este ticket?
+msg.ticket.add=AÃ±adir Nuevo Ticket
+msg.ticket.returnback=Volver a la PÃ¡gina Principal
+
 #ticket-form.html:
 msg.ticket-form.add=Insertar Nuevo Ticket
 msg.ticket-form.edit=Editar Ticket
 msg.ticket-form.date=Fecha
 msg.ticket-form.discount=Descuento (%)
-msg.ticket-form.location=Ubicación
-msg.ticket-form.select-location=Seleccionar una ubicación
+msg.ticket-form.location=UbicaciÃ³n
+msg.ticket-form.select-location=Seleccionar una ubicaciÃ³n
 msg.ticket-form.create=Crear
 msg.ticket-form.update=Actualizar
 msg.ticket-form.returnback=Volver a la Lista de Tickets
+
 # ticket detail
 msg.ticket-detail.ticket.detail=Detalle del Ticket
 msg.ticket-detail.ticket.date=Fecha
@@ -189,10 +191,10 @@ msg.ticket-detail.ticket.discount=Descuento
 msg.ticket-detail.ticket.total=Total
 msg.ticket-detail.ticket.supermarket=Supermercado
 msg.ticket-detail.ticket.products.associated=Productos Asociados al Ticket
-msg.ticket-detail.ticket.products.addExisting=Añadir Producto Existente
-msg.ticket-detail.ticket.products.addNew=Añadir Nuevo Producto
+msg.ticket-detail.ticket.products.addExisting=Aï¿½adir Producto Existente
+msg.ticket-detail.ticket.products.addNew=Aï¿½adir Nuevo Producto
 msg.ticket-detail.ticket.searchProduct=Buscar Producto
-msg.ticket-detail.ticket.searchResults=Resultados de la Búsqueda
+msg.ticket-detail.ticket.searchResults=Resultados de la BÃºsqueda
 msg.ticket-detail.ticket.returnback=Volver a la Lista de Tickets
 msg.ticket-detail.product.id=ID
 msg.ticket-detail.product.name=Nombre del Producto
@@ -200,19 +202,25 @@ msg.ticket-detail.product.price=Precio
 msg.ticket-detail.product.actions=Acciones
 msg.ticket-detail.product.remove=Eliminar
 msg.ticket-detail.product.search=Buscar
-msg.ticket-detail.product.add=Añadir
+msg.ticket-detail.product.add=AÃ±adir
 msg.ticket-detail.product.create=Crear
 
 # TicketProductController
-msg.ticket-controller.insert.error = Error al insertar el ticket. Por favor,inténtelo de nuevo.
-msg.ticket-controller.update.error = Error al actualizar el ticket. Por favor,inténtelo de nuevo.
-msg.ticket-controller.delete.error = Error al eliminar el ticket. Por favor, inténtelo de nuevo.
+msg.ticket-controller.insert.error = Error al insertar el ticket. Por favor,intÃ©ntelo de nuevo.
+msg.ticket-controller.update.error = Error al actualizar el ticket. Por favor, intÃ©ntelo de nuevo.
+msg.ticket-controller.delete.error = Error al eliminar el ticket. Por favor, intÃ©ntelo de nuevo.
 msg.ticket-controller.insert.integrity-violation = Error de integridad de datos al insertar el ticket. Es posible que el ticket ya exista.
-msg.ticket-controller.product.add.error = No se pudo añadir el producto al ticket. Verifique el ticket y el producto seleccionados.
-msg.ticket-controller.product.remove.error = No se pudo eliminar el producto del ticket. Por favor, inténtelo de nuevo.
-msg.ticket-controller.product.add.success = Producto añadido con éxito al ticket.
-msg.ticket-controller.product.remove.success = Producto eliminado con éxito del ticket.
-msg.ticket-controller.ticket.not-found = No se encontró el ticket con ID {0}.
-msg.ticket-controller.product.not-found = No se encontró el producto con ID {0}.
+msg.ticket-controller.product.add.error = No se pudo aï¿½adir el producto al ticket. Verifique el ticket y el producto seleccionados.
+msg.ticket-controller.product.remove.error = No se pudo eliminar el producto del ticket. Por favor, intÃ©ntelo de nuevo.
+msg.ticket-controller.product.add.success = Producto aÃ±adido con Ã©xito al ticket.
+msg.ticket-controller.product.remove.success = Producto eliminado con Ã©xito del ticket.
+msg.ticket-controller.ticket.not-found = No se encontrÃ³ el ticket con ID {0}.
+msg.ticket-controller.product.not-found = No se encontrÃ³ el producto con ID {0}.
 msg.ticket-controller.ticket.list.error = Error al listar los tickets.
 msg.ticket-controller.ticket.detail.error = Error al mostrar los detalles del ticket.
+
+# SOBREESCRIBIR MENSAJES DE LOGIN
+spring.security.ui.login.title=Iniciar sesiÃ³n
+spring.security.ui.login.username=Usuario
+spring.security.ui.login.password=ContraseÃ±a
+spring.security.ui.login.submit=Entrar
